@@ -1,3 +1,7 @@
+2012-12-30  Jesper Öqvist <jesper@llbit.se>
+
+    * Added biome map mode - renders a map color coded by biome ID
+
 2012-12-28  Jesper Öqvist <jesper@llbit.se>
 
     * Added button to reload all chunks in the scene
